Refactor volumes configuration to single docker

--- a/Dockerrun.aws.json.config
+++ b/Dockerrun.aws.json.config
@@ -1,21 +1,16 @@
 {
 	"AWSEBDockerrunVersion": "1",
-	"volumes": [{
-        "name": "spool",
-        "host": {
-            "sourcePath": "/efs/rapidpro/courier/spool"
-        }
-    }],
-	"mountPoints": [{
-		"sourceVolume": "spool",
-		"containerPath": "/var/spool/courier",
-		"readOnly": false
-	}],
 	"Image": {
 		"Name": "REGISTRY/IMAGE:TAG",
 		"Update": "true"
 	},
 	"Ports": [{
 		"ContainerPort": "80"
-	}]
+	}],
+    "Volumes": [
+        {
+            "HostDirectory": "/efs/rapidpro/courier/spool",
+            "ContainerDirectory": "/var/spool/courier"
+        }
+    ]
 }
