--- a/.github/workflows/build-develop-ireland-courier.yaml
+++ b/.github/workflows/build-develop-ireland-courier.yaml
@@ -33,5 +33,5 @@ jobs:
           context: .
           file: docker/Dockerfile
           push: true
-          tags: 452158872079.dkr.ecr.eu-west-1.amazonaws.com/rp-courier-rapidpro:${{ steps.vars.outputs.tag }}
+          tags: 452158872079.dkr.ecr.eu-west-1.amazonaws.com/courier-rapidpro:${{ steps.vars.outputs.tag }}
           no-cache: true
