Fix tag based Actions

--- a/.github/workflows/build-production-india-courier.yaml
+++ b/.github/workflows/build-production-india-courier.yaml
@@ -1,23 +1,23 @@
-name: Build Develop India RP-courier
+name: Build Production India RP-courier
 on:
   push:
     tags:
-      - 'v*.*.*-develop*'
+      - '!v*.*.*-staging*'
+      - '!v*.*.*-develop*'
+      - 'v*.*.*'
 jobs:
   docker:
     runs-on: ubuntu-latest
     environment: 
-      name: develop-india
+      name: production-india
     steps:
       - name: Set output
         id: vars
-        run: |
-          echo ::set-output name=branch::$(echo ${GITHUB_REF#refs/heads/}|cut -d'-' -f3-4|tr -s '-' '/');
-          echo ::set-output name=tag::$(echo ${GITHUB_REF#refs/heads/}|cut -d'/' -f3-|cut -d'-' -f1-2);
+        run: echo ::set-output name=tag::$(echo ${GITHUB_REF#refs/heads/}|cut -d'/' -f3);
       - name: Check out the repo
         uses: actions/checkout@v2
         with:
-          ref:  feature/build
+          ref: main
       - name: Set up QEMU
         uses: docker/setup-qemu-action@v1
       - name: Set up Docker Buildx
