--- a/.github/workflows/build-develop-ireland-courier.yaml
+++ b/.github/workflows/build-develop-ireland-courier.yaml
@@ -1,14 +1,19 @@
 name: Build Develop Ireland RP-Courier
 on:
   push:
-    branches:
-      - 'feature/build'
+    tags:
+      - 'v*.*.*-develop*'
 jobs:
   docker:
     runs-on: ubuntu-latest
     environment: 
       name: develop-ireland
     steps:
+      - name: Set output
+        id: vars
+        run: |
+          echo ::set-output name=branch::$(echo ${GITHUB_REF#refs/heads/}|cut -d'-' -f3-4|tr -s '-' '/');
+          echo ::set-output name=tag::$(echo ${GITHUB_REF#refs/heads/}|cut -d'/' -f3-|cut -d'-' -f1-2);
       - name: Check out the repo
         uses: actions/checkout@v2
         with:
@@ -17,9 +22,6 @@ jobs:
         uses: docker/setup-qemu-action@v1
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v1
-      - name: Set output
-        id: vars
-        run: echo ::set-output name=tag::develop-v6.5.2
       - name: Login to ECR
         uses: docker/login-action@v1 
         with:
