--- a/.github/workflows/build-develop-sp-courier.yaml
+++ b/.github/workflows/build-develop-sp-courier.yaml
@@ -1,4 +1,4 @@
-name: Build Develop India RP-courier
+name: Build Develop SP RP-Courier
 on:
   push:
     tags:
@@ -7,7 +7,7 @@ jobs:
   docker:
     runs-on: ubuntu-latest
     environment: 
-      name: develop-india
+      name: develop
     steps:
       - name: Set output
         id: vars
@@ -25,7 +25,7 @@ jobs:
       - name: Login to ECR
         uses: docker/login-action@v1 
         with:
-          registry: 242357350604.dkr.ecr.ap-south-1.amazonaws.com
+          registry: 242357350604.dkr.ecr.sa-east-1.amazonaws.com
           username: ${{ secrets.AWS_ACCESS_KEY_ID }}
           password: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
       - name: Build and push - Courier Image
@@ -35,5 +35,5 @@ jobs:
           context: .
           file: docker/Dockerfile
           push: true
-          tags: 242357350604.dkr.ecr.ap-south-1.amazonaws.com/courier:${{ steps.vars.outputs.tag }}
+          tags: 242357350604.dkr.ecr.sa-east-1.amazonaws.com/push-courier:${{ steps.vars.outputs.tag }}
           no-cache: true
