--- a/.github/workflows/build-production-ireland-courier.yaml
+++ b/.github/workflows/build-production-ireland-courier.yaml
@@ -1,23 +1,23 @@
-name: Build Develop India RP-courier
+name: Build Production Ireland RP-Courier
 on:
   push:
     tags:
-      - 'v*.*.*-develop*'
+      - '!v*.*.*-staging*'
+      - '!v*.*.*-develop*'
+      - 'v*.*.*'
 jobs:
   docker:
     runs-on: ubuntu-latest
     environment: 
-      name: develop-india
+      name: production-ireland
     steps:
       - name: Set output
         id: vars
-        run: |
-          echo ::set-output name=branch::$(echo ${GITHUB_REF#refs/heads/}|cut -d'-' -f3-4|tr -s '-' '/');
-          echo ::set-output name=tag::$(echo ${GITHUB_REF#refs/heads/}|cut -d'/' -f3-|cut -d'-' -f1-2);
+        run: echo ::set-output name=tag::$(echo ${GITHUB_REF#refs/heads/}|cut -d'/' -f3);
       - name: Check out the repo
         uses: actions/checkout@v2
         with:
-          ref:  feature/build
+          ref: main
       - name: Set up QEMU
         uses: docker/setup-qemu-action@v1
       - name: Set up Docker Buildx
@@ -25,7 +25,7 @@ jobs:
       - name: Login to ECR
         uses: docker/login-action@v1 
         with:
-          registry: 242357350604.dkr.ecr.ap-south-1.amazonaws.com
+          registry: 452158872079.dkr.ecr.eu-west-1.amazonaws.com
           username: ${{ secrets.AWS_ACCESS_KEY_ID }}
           password: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
       - name: Build and push - Courier Image
@@ -35,5 +35,5 @@ jobs:
           context: .
           file: docker/Dockerfile
           push: true
-          tags: 242357350604.dkr.ecr.ap-south-1.amazonaws.com/courier:${{ steps.vars.outputs.tag }}
+          tags: 452158872079.dkr.ecr.eu-west-1.amazonaws.com/rp-courier-rapidpro:${{ steps.vars.outputs.tag }}
           no-cache: true
