--- a/.github/workflows/build-production-sp-courier.yaml
+++ b/.github/workflows/build-production-sp-courier.yaml
@@ -1,13 +1,15 @@
-name: Build Develop India RP-courier
+name: Build Production SP RP-Courier
 on:
   push:
     tags:
-      - 'v*.*.*-develop*'
+      - '!v*.*.*-staging*'
+      - '!v*.*.*-develop*'
+      - 'v*.*.*'
 jobs:
   docker:
     runs-on: ubuntu-latest
     environment: 
-      name: develop-india
+      name: production
     steps:
       - name: Set output
         id: vars
@@ -17,7 +19,7 @@ jobs:
       - name: Check out the repo
         uses: actions/checkout@v2
         with:
-          ref:  feature/build
+          ref: main
       - name: Set up QEMU
         uses: docker/setup-qemu-action@v1
       - name: Set up Docker Buildx
@@ -25,7 +27,7 @@ jobs:
       - name: Login to ECR
         uses: docker/login-action@v1 
         with:
-          registry: 242357350604.dkr.ecr.ap-south-1.amazonaws.com
+          registry: 242357350604.dkr.ecr.sa-east-1.amazonaws.com
           username: ${{ secrets.AWS_ACCESS_KEY_ID }}
           password: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
       - name: Build and push - Courier Image
@@ -35,5 +37,5 @@ jobs:
           context: .
           file: docker/Dockerfile
           push: true
-          tags: 242357350604.dkr.ecr.ap-south-1.amazonaws.com/courier:${{ steps.vars.outputs.tag }}
+          tags: 242357350604.dkr.ecr.sa-east-1.amazonaws.com/push-courier:${{ steps.vars.outputs.tag }}
           no-cache: true
