Update push-tag-shared for only develop

--- a/.github/workflows/build-courier-push-tag-shared.yaml
+++ b/.github/workflows/build-courier-push-tag-shared.yaml
@@ -4,8 +4,6 @@ on:
   push:
     tags:
       - '*.*.*-develop'
-      - '*.*.*-staging'
-      - '*.*.*'
 
 jobs:
   docker:
@@ -56,7 +54,7 @@ jobs:
           username: ${{ secrets.AWS_ACCESS_KEY_ID_SHARED }}      
           password: ${{ secrets.AWS_SECRET_ACCESS_KEY_SHARED }}
 
-      - name: Build and push - LONG_PROJECT_NAME (PROJECT_NAME) Image
+      - name: Build and push - Courier Image
         uses: docker/build-push-action@v3
         with:
           context: .
