--- a/.github/workflows/build-courier-push-tag-shared.yaml
+++ b/.github/workflows/build-courier-push-tag-shared.yaml
@@ -57,7 +57,7 @@ jobs:
       - name: Build and push - Courier Image
         uses: docker/build-push-action@v3
         with:
-          context: ./docker
+          context: .
           labels: |
             tag=${{env.TAG}}
             commit=${{env.COMMIT_SHA}}
