--- a/.github/workflows/build-courier-push-tag-sp.yaml
+++ b/.github/workflows/build-courier-push-tag-sp.yaml
@@ -55,12 +55,12 @@ jobs:
       - name: Build and push - Courier Image
         uses: docker/build-push-action@v3
         with:
-          context: ./docker
+          context: .
           labels: |
             tag=${{env.TAG}}
             commit=${{env.COMMIT_SHA}}
             repository=${{env.IMAGE_SOURCE_URL}}
-          file: Dockerfile
+          file: docker/Dockerfile
           push: true
           tags: "${{env.IMAGE_TAG}}"
           no-cache: true
