--- a/.github/workflows/build-courier-push-tag-sp.yaml
+++ b/.github/workflows/build-courier-push-tag-sp.yaml
@@ -13,7 +13,11 @@ jobs:
       - name: Set variables
         run: |
             TAG="$( echo "${GITHUB_REF}" | cut -d'/' -f3 )"
-            if grep -qs -e '^.*.*-staging' <<< "${TAG}" ; then
+            if grep -qs -e '^.*.*-develop' <<< "${TAG}" ; then
+              echo "Found environment: DEVELOP - ${TAG}"
+              echo "ENVIRONMENT=develop" | tee -a "${GITHUB_ENV}"
+              exit 1 # stop action
+            elif grep -qs -e '^.*.*-staging' <<< "${TAG}" ; then
               echo "Found environment: STAGING - ${TAG}"
               echo "ENVIRONMENT=staging" | tee -a "${GITHUB_ENV}"
             elif grep -qs -e '^.*.*' <<< "${TAG}" ; then
