--- a/.github/workflows/build-courier-push-tag-shared.yaml
+++ b/.github/workflows/build-courier-push-tag-shared.yaml
@@ -1,4 +1,4 @@
-name: Build Courier in Shared(Push Tag)
+name: Build Courier in Shared (Push Tag)
 
 on:
   push:
@@ -29,7 +29,7 @@ jobs:
             VERSION="${TAG}"
             echo "VERSION=${VERSION}" | tee -a "${GITHUB_ENV}"
             echo "COMMIT_SHA=$GITHUB_SHA" | tee -a "${GITHUB_ENV}"
-            echo "IMAGE_TAG=courier:${TAG}" | tee -a "${GITHUB_ENV}"
+            echo "IMAGE_TAG=${{ secrets.ECR }}/courier:${TAG}" | tee -a "${GITHUB_ENV}"
             echo "IMAGE_SOURCE_URL=https://github.com/weni-ai/courier" | tee -a "${GITHUB_ENV}"
             echo "MANIFESTS_REPOSITORY=Ilhasoft/kubernetes-manifests-platform" | tee -a "${GITHUB_ENV}"
             echo "MANIFESTS_APPLICATION=weni-flows/courier" | tee -a "${GITHUB_ENV}"
