--- a/.github/workflows/build-courier-push-tag-sp-india-ire.yaml
+++ b/.github/workflows/build-courier-push-tag-sp-india-ire.yaml
@@ -1,4 +1,4 @@
-name: Build Courier in SP (Push Tag)
+name: Build Courier in SP, India and Ireland (Push Tag)
 
 on:
   push:
@@ -48,7 +48,24 @@ jobs:
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v2
 
-      - name: Login to Registry
+      - name: Login to Registry India
+        if: ${{ contains(env.TAG, '-india') }}
+        uses: docker/login-action@v2
+        with:
+          registry: ${{ secrets.ECR_INDIA }}
+          username: ${{ secrets.AWS_ACCESS_KEY_ID_INDIA }}      
+          password: ${{ secrets.AWS_SECRET_ACCESS_KEY_INDIA }}
+
+      - name: Login to Registry Ireland
+        if: ${{ contains(env.TAG, '-ire') }}
+        uses: docker/login-action@v2
+        with:
+          registry: ${{ secrets.ECR_IRE }}
+          username: ${{ secrets.AWS_ACCESS_KEY_ID_IRE }}      
+          password: ${{ secrets.AWS_SECRET_ACCESS_KEY_IRE }}
+
+      - name: Login to Registry SP
+        if: ${{ !contains(env.TAG, '-india') && !contains(env.TAG, '-ire') }}
         uses: docker/login-action@v2
         with:
           registry: ${{ secrets.ECR_SP }}
@@ -67,3 +84,4 @@ jobs:
           push: true
           tags: "${{env.IMAGE_TAG}}"
           no-cache: true
+          
