--- a/.github/workflows/build-courier-push-tag-sp-india-ire.yaml
+++ b/.github/workflows/build-courier-push-tag-sp-india-ire.yaml
@@ -31,7 +31,13 @@ jobs:
             VERSION="${TAG}"
             echo "VERSION=${VERSION}" | tee -a "${GITHUB_ENV}"
             echo "COMMIT_SHA=$GITHUB_SHA" | tee -a "${GITHUB_ENV}"
-            echo "IMAGE_TAG=${{ secrets.ECR }}/push-courier:${TAG}" | tee -a "${GITHUB_ENV}"
+            if [[ "${TAG}" == *"-india"* ]]; then
+              echo "IMAGE_TAG=${{ secrets.ECR_INDIA }}/courier:${TAG}" | tee -a "${GITHUB_ENV}"
+            elif [[ "${TAG}" == *"-ire"* ]]; then
+              echo "IMAGE_TAG=${{ secrets.ECR_IRE }}/rp-courier-rapidpro:${TAG}" | tee -a "${GITHUB_ENV}"
+            else
+              echo "IMAGE_TAG=${{ secrets.ECR_SP }}/push-courier:${TAG}" | tee -a "${GITHUB_ENV}"
+            fi
             echo "IMAGE_SOURCE_URL=https://github.com/weni-ai/courier" | tee -a "${GITHUB_ENV}"
             echo "MANIFESTS_REPOSITORY=Ilhasoft/kubernetes-manifests-platform" | tee -a "${GITHUB_ENV}"
             echo "MANIFESTS_APPLICATION=weni-flows/courier" | tee -a "${GITHUB_ENV}"
