--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -1,20 +1,31 @@
-FROM golang:1.17.5-alpine3.14
+FROM golang:1.17.5-alpine3.14 AS builder
 
 WORKDIR /app
 
-RUN apk update \
-  && apk add --virtual build-deps gcc git \
-  && rm -rf /var/cache/apk/*
+RUN apk add --no-cache --virtual build-deps curl gcc
 
-RUN addgroup -S golang \
-  && adduser -S -G golang golang
+COPY go.mod go.sum ./
+RUN go mod download
 
-COPY . .
-
+COPY . ./
 RUN go install -v ./cmd/...
-RUN chown -R golang /app
 
-USER golang
+FROM alpine:3.18.4
+
+ENV APP_USER=app \
+    APP_GROUP=app \
+    USER_ID=11999 \
+    GROUP_ID=11999
+
+RUN addgroup --system --gid ${GROUP_ID} ${APP_GROUP} \
+    && adduser --system --disabled-password --home /home/${APP_USER} \
+    --uid ${USER_ID} --ingroup ${APP_GROUP} ${APP_USER}
+
+COPY --from=builder --chown=${APP_USER}:${APP_GROUP} /go/bin/ /app/
+
+WORKDIR /app
+
+USER ${APP_USER}:${APP_GROUP}
 
 EXPOSE 8080
-ENTRYPOINT ["courier"]
+ENTRYPOINT ["./courier"]
