remove copy from Dockerfile and improve cache

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -4,11 +4,14 @@ WORKDIR /app
 
 RUN apk add --no-cache --virtual build-deps curl gcc
 
-COPY go.mod go.sum ./
-RUN --mount=type=cache,target=/go/pkg/mod/ go mod download
+RUN --mount=type=cache,target=/go/pkg/mod/ \
+    --mount=type=bind,source=go.sum,target=go.sum \
+    --mount=type=bind,source=go.mod,target=go.mod \
+    go mod download -x
 
-COPY . ./
-RUN --mount=type=cache,target=/go/pkg/mod/ go install -v ./cmd/...
+RUN --mount=type=cache,target=/go/pkg/mod/ \
+    --mount=type=bind,target=. \
+    go install -v ./cmd/...
 
 FROM alpine:3.18.4
 
