--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -10,14 +10,21 @@ jobs:
       matrix:
         pg-version: ['12', '13']
     runs-on: ubuntu-latest
+    container:
+      image: golang:1.25-trixie
+
+    services:
+      redis:
+        image: redis
+        options: >-
+          --health-cmd "redis-cli ping"
+          --health-interval 10s
+          --health-timeout 5s
+          --health-retries 5
+
     steps:
     - name: Checkout code
       uses: actions/checkout@v1
-
-    - name: Install Redis
-      uses: zhulik/redis-action@v1.0.0
-      with:
-        redis version: ${{ env.redis-version }}
 
     - name: Install PostgreSQL
       uses: harmon758/postgresql-action@v1
