--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -2,13 +2,12 @@ name: CI
 on: [push, pull_request]
 env:
   go-version: '1.24.x'
-  redis-version: '3.2.4'
 jobs:
   test:
     name: Test
     strategy:
       matrix:
-        pg-version: ['12', '13']
+        pg-version: ['postgres:12-alpine', 'postgres:13-alpine']
     runs-on: ubuntu-latest
     container:
       image: golang:1.24-trixie
@@ -21,23 +20,23 @@ jobs:
           --health-interval 10s
           --health-timeout 5s
           --health-retries 5
+      postgres:
+        image: ${{ matrix.pg-version }}
+        env:
+          POSTGRES_DB: courier_test
+          POSTGRES_USER: courier
+          POSTGRES_PASSWORD: courier
+        ports:
+          - 5432:5432
+        options: >-
+          --health-cmd pg_isready
+          --health-interval 10s
+          --health-timeout 5s
+          --health-retries 5
 
     steps:
     - name: Checkout code
       uses: actions/checkout@v1
-
-    - name: Install PostgreSQL
-      uses: harmon758/postgresql-action@v1
-      with:
-        postgresql version: ${{ matrix.pg-version }}
-        postgresql db: courier_test
-        postgresql user: courier
-        postgresql password: courier
-
-    - name: Install Go
-      uses: actions/setup-go@v1
-      with:
-        go-version: ${{ env.go-version }}
 
     - name: Install Rabbitmq
       uses: namoshek/rabbitmq-github-action@v1
