Update CI workflow to use RabbitMQ Docker service directly, removing the previous installation step for improved simplicity and consistency in the testing environment.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -33,16 +33,14 @@ jobs:
           --health-interval 10s
           --health-timeout 5s
           --health-retries 5
+      rabbitmq:
+        image: rabbitmq:3.9-alpine
+        ports:
+          - 5672:5672
 
     steps:
     - name: Checkout code
       uses: actions/checkout@v1
-
-    - name: Install Rabbitmq
-      uses: namoshek/rabbitmq-github-action@v1
-      with:
-        version: '3.9.7'
-        ports: '5672:5672'
 
     - name: Run tests
       run: go test -p=1 -coverprofile=coverage.text -covermode=atomic ./...
