Update CI workflow to specify Redis version 3.2.4-alpine for improved consistency in testing environment.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -2,6 +2,7 @@ name: CI
 on: [push, pull_request]
 env:
   go-version: '1.24.x'
+  redis-version: '3.2.4'
 jobs:
   test:
     name: Test
@@ -14,7 +15,7 @@ jobs:
 
     services:
       redis:
-        image: redis
+        image: redis:3.2.4-alpine
         options: >-
           --health-cmd "redis-cli ping"
           --health-interval 10s
